# aind-ophys-bergamo-stitcher

./: .gitignore  pyproject.toml
.codeocean/: datasets.json  environment.json
code/: bergamo_stitcher.py  run  run_capsule.py
environment/: Dockerfile
metadata/: metadata.yml
